--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Centered Box</title>
+  <title>GhostBlackout's Website</title>
   <style>
 body {
   background-image: url('gradient.jpeg');
@@ -20,14 +20,34 @@ body {
             border: 3px solid #505050;
             padding: 20px;
             background-color: #4d7fe2;
+            text-align: center;
         }
     </style>
 </head>
 <body>
 
     <div class="text-box">
-        <p>This box is centered on the screen.</p>
+        <p>Welcome to my website .</p>
+
+
+
+
+          </a>
     </div>
 
 </body>
+<footer>
+  
+    <a href="https://www.firefox.com">
+        <button class="image-button">
+          <img src="ffox.webp" alt="Button Image">
+        </button>
+
+    <img src="chrome_evil.gif" alt="Animated GIF">
+
+    <img src="site_sucks.gif" alt="Animated GIF">
+
+    </div>  
+
+  </footer>
 </html>
