--- a/index.html
+++ b/index.html
@@ -1,53 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>GhostBlackout's Website</title>
-  <style>
-body {
-  background-image: url('gradient.jpeg');
-    background-size: cover; /* Adjust to fit the screen */
-    background-repeat: no-repeat; /* Prevent image repetition */
-    background-attachment: fixed; /* Keep the image fixed while scrolling */
-
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh; /* Full viewport height */
-            margin: 0;
+    <title>Footer with Larger Images</title>
+    <style>
+        body {
+            background-image: url('gradient.jpeg');
+            background-size: cover;
+            background-repeat: no-repeat;
         }
 
-        .text-box {
-            border: 3px solid #505050;
-            padding: 20px;
-            background-color: #4d7fe2;
+        footer {
             text-align: center;
+            padding: 10px;
+            background-color: rgba(255, 255, 255, 0); /* Semi-transparent white */
+          }
+
+        footer img {
+            width: 100px; /* Adjust the width as needed */
+            height: auto;
+            margin: 0 5px;
+        }
+
+        footer a {
+            text-decoration: none;
         }
     </style>
 </head>
 <body>
-
-    <div class="text-box">
-        <p>Welcome to my website .</p>
-
-
-
-
-          </a>
-    </div>
-
+    <footer>
+        <img src="flag-bi.png" alt="flag-bi">
+        <img src="chrome_evil.gif" alt="chrome_evil">
+        <a href="https://www.mozilla.org/en-US/firefox/"><img src="ffox.webp" alt="Firefox"></a>
+        <img src="phonechump.gif" alt="phonechump">
+        <a href="https://github.com/Ghostblackout"><img src="github.png" alt="Github"></a>
+        <img src="made_on_linux.gif" alt="made_on_linux">
+    </footer>
 </body>
-<footer>
-  
-    <a href="https://www.firefox.com">
-        <button class="image-button">
-          <img src="ffox.webp" alt="Button Image">
-        </button>
-
-    <img src="chrome_evil.gif" alt="Animated GIF">
-
-    <img src="site_sucks.gif" alt="Animated GIF">
-
-    </div>  
-
-  </footer>
 </html>
