--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
       <a href="#">Contact</a>
     </nav>
     <p>Hi im ghost this is my frist website. With this website im trying to make a modern geocities theme for this website.</p>
-    <p>This website is still under construction. All the code for this website is on my github</p>
+    <p>This website is still under construction github fucked up and now the gallery page dose not work. 
+    <p> All the code for this website is on my github</p>
     <p>last updated 12/30/24</p>
   </header>
 
